# gmail_MCP

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  client_secret.json.example
examples/: fetch_emails.rs
mcp-core/colored_json/: Cargo.toml
mcp-core/colored_json/examples/: color.rs
mcp-core/colored_json/src/: lib.rs
mcp-core/colored_json/tests/: test.rs
mcp-core/google-apis-common/: Cargo.toml
mcp-core/google-gmail1/: Cargo.toml
mcp-core/html2md/: Cargo.toml
mcp-core/html2text/: Cargo.toml
mcp-core/mcp-core/: Cargo.toml  README.md
mcp-core/mcp-core-macros/: Cargo.toml  README.md
mcp-core/mcp-core-macros/src/: lib.rs
mcp-core/mcp-core-macros/tests/: annotation_tests.rs
mcp-core/mcp-core/examples/: echo_client.rs  echo_server.rs
mcp-core/mcp-core/src/: client.rs  protocol.rs  server.rs  tools.rs
mcp-core/mcp-core/src/transport/: mod.rs
mcp-core/mcp-core/src/transport/client/: mod.rs  sse.rs  stdio.rs
mcp-core/mcp-core/src/transport/server/: mod.rs  sse.rs  stdio.rs
mcp-core/rig-core/: Cargo.toml
mcp-core/yup-oauth2/: Cargo.toml
src/: lib.rs  main.rs  parser.rs  reademail.rs  url_remover.rs  utils.rs
