[package]
name = "gmailrs"
version = "0.1.0"
edition = "2021"

[dependencies]
google-gmail1 = "6.0.0+20240624"
yup-oauth2 = "11.0"
hyper-rustls = "0.24"
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
html2text = "0.6"
anyhow = "1.0"
mcp-core = { version = "0.1.50", features = ["sse"] }
mcp-core-macros = "0.1.30"
schemars = { version = "0.8.22", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"
