[package]
name = "gmail-mcp-server"
version = "0.1.0"
edition = "2021"
authors = ["Hamze GHALEBI <ghalebi@gmail.com>"]
license = "MIT"
description = "A clean, simplified MCP server for Gmail integration built with Rust"
repository = "https://github.com/RustSandbox/gmail_MCP"
homepage = "https://github.com/RustSandbox/gmail_MCP"
documentation = "https://docs.rs/gmail-mcp-server"
keywords = ["gmail", "mcp", "email", "oauth2", "api"]
categories = ["email", "api-bindings", "authentication"]
readme = "README.md"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
google-gmail1 = "6.0.0+20240624"
yup-oauth2 = "11.0"
hyper-rustls = "0.24"
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
html2text = "0.6"
anyhow = "1.0"
mcp-core = { version = "0.1.50", features = ["sse"] }
mcp-core-macros = "0.1.30"
schemars = { version = "0.8.22", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.10"
